[tool.poetry]
name = "telescrape"
version = "0.1.0"
description = ""
authors = ["ephell <dremaitiserikas@yahoo.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
telethon = "^1.34.0"
pyside6 = "^6.6.2"
qasync = "^0.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
