[tool.poetry]
name = "Telescrape"
version = "1.0.0"
description = ""
authors = ["ephell <dremaitiserikas@yahoo.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ephell/Telescrape"
repository = "https://github.com/ephell/Telescrape"
packages = [{include = "src"}]
include = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
telethon = "^1.34.0"
pyside6 = "^6.6.2"
qasync = "^0.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
